--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,5 @@ spring.datasource.url=jdbc:postgresql://localhost:5433/corporate_social_media
 spring.datasource.username=postgres
 spring.datasource.password=password
 
+
+security.token.secret=Teste
